--- a/Redes Neurais/Mini Projeto 02 Redes neurais/miniprojeto03.ipynb
+++ b/Redes Neurais/Mini Projeto 02 Redes neurais/miniprojeto03.ipynb
@@ -19,11 +19,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ImpoImportando todas as bibliotecas e a base de dados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import datasets\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Baixar o conjunto de treinamento MNIST, nesse poonto não estou usando nenhuma transformação\n",
+    "base_treinamento = datasets.MNIST(root='./data', train=True, download=True)\n",
+    "base_test = datasets.MNIST(root='./data', train=False, download=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carrega todos os dados\n",
+    "treinamento = torch.utils.data.DataLoader(dataset=base_treinamento, shuffle=True)\n",
+    "teste = torch.utils.data.DataLoader(dataset=base_test, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definição do MLP em Pytorch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.fc2 = nn.Linear(hidden_size, output_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.fc1(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc2(x)\n",
+    "        return x"
+   ]
   }
  ],
  "metadata": {
@@ -33,7 +95,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.4"
   }
  },
