Alterações no corpo total
Alterações que incluem;

modelo MLP
carregamento de dados
inicio do treinamento
e possiveis mokdificaçoes na base

--- a/Redes Neurais/Mini Projeto 03 Redes neurais/miniprojeto03.ipynb
+++ b/Redes Neurais/Mini Projeto 03 Redes neurais/miniprojeto03.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,91 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./data\\MNIST\\raw\\train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\train-images-idx3-ubyte.gz to ./data\\MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\\train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\train-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./data\\MNIST\\raw\\t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\t10k-images-idx3-ubyte.gz to ./data\\MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data\\MNIST\\raw\\t10k-labels-idx1-ubyte.gz to ./data\\MNIST\\raw\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Baixar o conjunto de treinamento MNIST, nesse poonto não estou usando nenhuma transformação\n",
     "base_treinamento = datasets.MNIST(root='./data', train=True, download=True)\n",
@@ -133,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,6 +85,89 @@
     "        x = self.relu(x)\n",
     "        x = self.fc2(x)\n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementação do modelo base de acordo com a solicitação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dados da MLP \"Direto do classroom\"\n",
+    "\n",
+    "input_size = 784  # Tamanho da entrada para o MNIST\n",
+    "hidden_size = 128  # Número de neurônios na camada oculta\n",
+    "output_size = 10  # Número de saidas possiveis\n",
+    "\n",
+    "num_epochs = 5\n",
+    "batch_size = 128 \n",
+    "learning_rate = 0.001\n",
+    "\n",
+    "# Definição do modelo\n",
+    "rede = MLP(input_size, hidden_size, output_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Inicializando o função de otimização (parametros passados no classroom)\n",
+    "2. Iniciando a GPU (para esse caso vou inicia-la apenas se disponivel no PC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLP(\n",
+       "  (fc1): Linear(in_features=784, out_features=128, bias=True)\n",
+       "  (relu): ReLU()\n",
+       "  (fc2): Linear(in_features=128, out_features=10, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Inicializando o atimizador\n",
+    "\n",
+    "otimizador = torch.optim.SGD(rede.parameters(), lr=learning_rate)\n",
+    "\n",
+    "processador = torch.device('cuda' if torch.cuda.is_available() else 'cpu') # cuda ativa GPU\n",
+    "rede.to(processador) # GPU se disponivel é ativada aqui"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# chegou a hora de treinar o modelo\n",
+    "## para assim ver os resultados e desse modo aplicar possiveis mudanças"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoca in range(num_epochs): # carrega o numero de epocas em treinamento\n",
+    "    for i, (images, labels) in enumerate (treinamento): # carrega os dados de treinamento da base de dados de treino\n",
+    "        "
    ]
   }
  ],
