tentativa de usar o optuna

--- a/Redes Neurais/Mini Projeto 03 Redes neurais/miniprojeto03.ipynb
+++ b/Redes Neurais/Mini Projeto 03 Redes neurais/miniprojeto03.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,63 +938,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def objective(trial):\n",
+    "def objective(trial : optuna.Trial):\n",
     "    hidden_size = trial.suggest_int('hidden_size', 50, 1000)\n",
     "    num_epochs = trial.suggest_int('num_epochs', 5, 30)\n",
-    "    learning_rate = trial.suggest_float('learning_rate', 1e-5, 1e-1, log=True)\n",
+    "    learning_rate = trial.suggest_float('learning_rate', 1e-5, 1e-1)\n",
+    "\n",
+    "    print(f\"\\nTRIAL #{trial.number}: {trial.params}\")\n",
     "    \n",
-    "    accuracy = treinar_e_avaliar(hidden_size, num_epochs, learning_rate)\n",
+    "    accuracy = train_and_evaluate(hidden_size, num_epochs, learning_rate)\n",
     "    return accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2023-11-14 22:27:14,706] A new study created in memory with name: no-name-f6df7506-a926-4bdb-9d42-5b50c6f43507\n",
-      "[W 2023-11-14 22:27:14,710] Trial 0 failed with parameters: {'hidden_size': 752, 'num_epochs': 8, 'learning_rate': 0.011371889913683824} because of the following error: TypeError(\"treinar_e_avaliar() missing 3 required positional arguments: 'optimizer', 'num_epochs', and 'device'\").\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\optuna\\study\\_optimize.py\", line 200, in _run_trial\n",
-      "    value_or_values = func(trial)\n",
-      "                      ^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Pichau\\AppData\\Local\\Temp\\ipykernel_9488\\1410685370.py\", line 6, in objective\n",
-      "    accuracy = treinar_e_avaliar(hidden_size, num_epochs, learning_rate)\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "TypeError: treinar_e_avaliar() missing 3 required positional arguments: 'optimizer', 'num_epochs', and 'device'\n",
-      "[W 2023-11-14 22:27:14,711] Trial 0 failed with value None.\n"
+      "[I 2023-11-14 22:36:21,730] A new study created in RDB with name: MLP_MNIST_Python\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "treinar_e_avaliar() missing 3 required positional arguments: 'optimizer', 'num_epochs', and 'device'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Redes Neurais\\Mini Projeto 03 Redes neurais\\miniprojeto03.ipynb Célula 34\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pichau/Desktop/Faculdade/Projects/Facul%20Repositorios/Repositorios_Universitarios/Redes%20Neurais/Mini%20Projeto%2003%20Redes%20neurais/miniprojeto03.ipynb#X45sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Criar um estudo Optuna e otimizar os hiperparâmetros\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pichau/Desktop/Faculdade/Projects/Facul%20Repositorios/Repositorios_Universitarios/Redes%20Neurais/Mini%20Projeto%2003%20Redes%20neurais/miniprojeto03.ipynb#X45sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m study \u001b[39m=\u001b[39m optuna\u001b[39m.\u001b[39mcreate_study(direction\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mmaximize\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Pichau/Desktop/Faculdade/Projects/Facul%20Repositorios/Repositorios_Universitarios/Redes%20Neurais/Mini%20Projeto%2003%20Redes%20neurais/miniprojeto03.ipynb#X45sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m study\u001b[39m.\u001b[39;49moptimize(objective, n_trials\u001b[39m=\u001b[39;49m\u001b[39m50\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pichau/Desktop/Faculdade/Projects/Facul%20Repositorios/Repositorios_Universitarios/Redes%20Neurais/Mini%20Projeto%2003%20Redes%20neurais/miniprojeto03.ipynb#X45sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Exibir os melhores hiperparâmetros encontrados\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pichau/Desktop/Faculdade/Projects/Facul%20Repositorios/Repositorios_Universitarios/Redes%20Neurais/Mini%20Projeto%2003%20Redes%20neurais/miniprojeto03.ipynb#X45sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m best_params \u001b[39m=\u001b[39m study\u001b[39m.\u001b[39mbest_params\n",
-      "File \u001b[1;32mc:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\optuna\\study\\study.py:451\u001b[0m, in \u001b[0;36mStudy.optimize\u001b[1;34m(self, func, n_trials, timeout, n_jobs, catch, callbacks, gc_after_trial, show_progress_bar)\u001b[0m\n\u001b[0;32m    348\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39moptimize\u001b[39m(\n\u001b[0;32m    349\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m    350\u001b[0m     func: ObjectiveFuncType,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    357\u001b[0m     show_progress_bar: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m    358\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    359\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Optimize an objective function.\u001b[39;00m\n\u001b[0;32m    360\u001b[0m \n\u001b[0;32m    361\u001b[0m \u001b[39m    Optimization is done by choosing a suitable set of hyperparameter values from a given\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    449\u001b[0m \u001b[39m            If nested invocation of this method occurs.\u001b[39;00m\n\u001b[0;32m    450\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 451\u001b[0m     _optimize(\n\u001b[0;32m    452\u001b[0m         study\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m,\n\u001b[0;32m    453\u001b[0m         func\u001b[39m=\u001b[39;49mfunc,\n\u001b[0;32m    454\u001b[0m         n_trials\u001b[39m=\u001b[39;49mn_trials,\n\u001b[0;32m    455\u001b[0m         timeout\u001b[39m=\u001b[39;49mtimeout,\n\u001b[0;32m    456\u001b[0m         n_jobs\u001b[39m=\u001b[39;49mn_jobs,\n\u001b[0;32m    457\u001b[0m         catch\u001b[39m=\u001b[39;49m\u001b[39mtuple\u001b[39;49m(catch) \u001b[39mif\u001b[39;49;00m \u001b[39misinstance\u001b[39;49m(catch, Iterable) \u001b[39melse\u001b[39;49;00m (catch,),\n\u001b[0;32m    458\u001b[0m         callbacks\u001b[39m=\u001b[39;49mcallbacks,\n\u001b[0;32m    459\u001b[0m         gc_after_trial\u001b[39m=\u001b[39;49mgc_after_trial,\n\u001b[0;32m    460\u001b[0m         show_progress_bar\u001b[39m=\u001b[39;49mshow_progress_bar,\n\u001b[0;32m    461\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\optuna\\study\\_optimize.py:66\u001b[0m, in \u001b[0;36m_optimize\u001b[1;34m(study, func, n_trials, timeout, n_jobs, catch, callbacks, gc_after_trial, show_progress_bar)\u001b[0m\n\u001b[0;32m     64\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     65\u001b[0m     \u001b[39mif\u001b[39;00m n_jobs \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m---> 66\u001b[0m         _optimize_sequential(\n\u001b[0;32m     67\u001b[0m             study,\n\u001b[0;32m     68\u001b[0m             func,\n\u001b[0;32m     69\u001b[0m             n_trials,\n\u001b[0;32m     70\u001b[0m             timeout,\n\u001b[0;32m     71\u001b[0m             catch,\n\u001b[0;32m     72\u001b[0m             callbacks,\n\u001b[0;32m     73\u001b[0m             gc_after_trial,\n\u001b[0;32m     74\u001b[0m             reseed_sampler_rng\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m     75\u001b[0m             time_start\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m,\n\u001b[0;32m     76\u001b[0m             progress_bar\u001b[39m=\u001b[39;49mprogress_bar,\n\u001b[0;32m     77\u001b[0m         )\n\u001b[0;32m     78\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     79\u001b[0m         \u001b[39mif\u001b[39;00m n_jobs \u001b[39m==\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:\n",
-      "File \u001b[1;32mc:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\optuna\\study\\_optimize.py:163\u001b[0m, in \u001b[0;36m_optimize_sequential\u001b[1;34m(study, func, n_trials, timeout, catch, callbacks, gc_after_trial, reseed_sampler_rng, time_start, progress_bar)\u001b[0m\n\u001b[0;32m    160\u001b[0m         \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m    162\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 163\u001b[0m     frozen_trial \u001b[39m=\u001b[39m _run_trial(study, func, catch)\n\u001b[0;32m    164\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m    165\u001b[0m     \u001b[39m# The following line mitigates memory problems that can be occurred in some\u001b[39;00m\n\u001b[0;32m    166\u001b[0m     \u001b[39m# environments (e.g., services that use computing containers such as GitHub Actions).\u001b[39;00m\n\u001b[0;32m    167\u001b[0m     \u001b[39m# Please refer to the following PR for further details:\u001b[39;00m\n\u001b[0;32m    168\u001b[0m     \u001b[39m# https://github.com/optuna/optuna/pull/325.\u001b[39;00m\n\u001b[0;32m    169\u001b[0m     \u001b[39mif\u001b[39;00m gc_after_trial:\n",
-      "File \u001b[1;32mc:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\optuna\\study\\_optimize.py:251\u001b[0m, in \u001b[0;36m_run_trial\u001b[1;34m(study, func, catch)\u001b[0m\n\u001b[0;32m    244\u001b[0m         \u001b[39massert\u001b[39;00m \u001b[39mFalse\u001b[39;00m, \u001b[39m\"\u001b[39m\u001b[39mShould not reach.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    246\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m    247\u001b[0m     frozen_trial\u001b[39m.\u001b[39mstate \u001b[39m==\u001b[39m TrialState\u001b[39m.\u001b[39mFAIL\n\u001b[0;32m    248\u001b[0m     \u001b[39mand\u001b[39;00m func_err \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    249\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(func_err, catch)\n\u001b[0;32m    250\u001b[0m ):\n\u001b[1;32m--> 251\u001b[0m     \u001b[39mraise\u001b[39;00m func_err\n\u001b[0;32m    252\u001b[0m \u001b[39mreturn\u001b[39;00m frozen_trial\n",
-      "File \u001b[1;32mc:\\Users\\Pichau\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\optuna\\study\\_optimize.py:200\u001b[0m, in \u001b[0;36m_run_trial\u001b[1;34m(study, func, catch)\u001b[0m\n\u001b[0;32m    198\u001b[0m \u001b[39mwith\u001b[39;00m get_heartbeat_thread(trial\u001b[39m.\u001b[39m_trial_id, study\u001b[39m.\u001b[39m_storage):\n\u001b[0;32m    199\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 200\u001b[0m         value_or_values \u001b[39m=\u001b[39m func(trial)\n\u001b[0;32m    201\u001b[0m     \u001b[39mexcept\u001b[39;00m exceptions\u001b[39m.\u001b[39mTrialPruned \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    202\u001b[0m         \u001b[39m# TODO(mamu): Handle multi-objective cases.\u001b[39;00m\n\u001b[0;32m    203\u001b[0m         state \u001b[39m=\u001b[39m TrialState\u001b[39m.\u001b[39mPRUNED\n",
-      "\u001b[1;32mc:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Redes Neurais\\Mini Projeto 03 Redes neurais\\miniprojeto03.ipynb Célula 34\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pichau/Desktop/Faculdade/Projects/Facul%20Repositorios/Repositorios_Universitarios/Redes%20Neurais/Mini%20Projeto%2003%20Redes%20neurais/miniprojeto03.ipynb#X45sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m num_epochs \u001b[39m=\u001b[39m trial\u001b[39m.\u001b[39msuggest_int(\u001b[39m'\u001b[39m\u001b[39mnum_epochs\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m30\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pichau/Desktop/Faculdade/Projects/Facul%20Repositorios/Repositorios_Universitarios/Redes%20Neurais/Mini%20Projeto%2003%20Redes%20neurais/miniprojeto03.ipynb#X45sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m learning_rate \u001b[39m=\u001b[39m trial\u001b[39m.\u001b[39msuggest_float(\u001b[39m'\u001b[39m\u001b[39mlearning_rate\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m1e-5\u001b[39m, \u001b[39m1e-1\u001b[39m, log\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Pichau/Desktop/Faculdade/Projects/Facul%20Repositorios/Repositorios_Universitarios/Redes%20Neurais/Mini%20Projeto%2003%20Redes%20neurais/miniprojeto03.ipynb#X45sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m accuracy \u001b[39m=\u001b[39m treinar_e_avaliar(hidden_size, num_epochs, learning_rate)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pichau/Desktop/Faculdade/Projects/Facul%20Repositorios/Repositorios_Universitarios/Redes%20Neurais/Mini%20Projeto%2003%20Redes%20neurais/miniprojeto03.ipynb#X45sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mreturn\u001b[39;00m accuracy\n",
-      "\u001b[1;31mTypeError\u001b[0m: treinar_e_avaliar() missing 3 required positional arguments: 'optimizer', 'num_epochs', and 'device'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "TRIAL #5: {'hidden_size': 406, 'num_epochs': 15, 'learning_rate': 0.08802697282237276}\n",
+      "\n",
+      "TRIAL #4: {'hidden_size': 672, 'num_epochs': 27, 'learning_rate': 0.025927819299156014}\n",
+      "\n",
+      "TRIAL #1: {'hidden_size': 813, 'num_epochs': 25, 'learning_rate': 0.005587731721263885}\n",
+      "\n",
+      "TRIAL #3: {'hidden_size': 823, 'num_epochs': 27, 'learning_rate': 0.04935249034904865}\n",
+      "\n",
+      "TRIAL #0: {'hidden_size': 902, 'num_epochs': 8, 'learning_rate': 0.052782684138989636}\n",
+      "\n",
+      "TRIAL #2: {'hidden_size': 570, 'num_epochs': 28, 'learning_rate': 0.013282412713532211}\n"
      ]
     }
    ],
    "source": [
     "# Criar um estudo Optuna e otimizar os hiperparâmetros\n",
-    "study = optuna.create_study(direction='maximize')\n",
-    "study.optimize(objective, n_trials=50)\n",
+    "study = optuna.create_study(\n",
+    "    direction='maximize',\n",
+    "    storage='sqlite:///melhores_parametros.db',\n",
+    "    study_name='MLP_MNIST_Python',\n",
+    "    load_if_exists=True\n",
+    "    )\n",
+    "\n",
+    "study.optimize(objective, n_trials=50, n_jobs=-1)\n",
     "\n",
     "# Exibir os melhores hiperparâmetros encontrados\n",
     "best_params = study.best_params\n",
