pequenas alteraçoes espero que jesus me salve da merda

--- a/Aprendizagem por Refoco/Projeto_Atari/main.ipynb
+++ b/Aprendizagem por Refoco/Projeto_Atari/main.ipynb
@@ -1,24 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inicialização (fazendo o arquivo se encotrar no repositorio)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pygame # this import here is just to prevent a strange bug (with some dynamic library used by pygame and other packages)\n",
-    "\n",
+    "import pygame\n",
     "import sys\n",
     "from os import path, getcwd\n",
-    "from IPython.display import clear_output\n",
     "\n",
     "# Obtém o caminho do diretório do script atual\n",
     "script_dir = getcwd()\n",
     "\n",
     "# Adiciona o diretório pai ao caminho do sistema\n",
-    "sys.path.append(path.dirname(script_dir))\n",
-    "\n",
-    "clear_output()"
+    "sys.path.append(path.dirname(script_dir))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importando libs necessárias"
    ]
   },
   {
@@ -36,10 +46,16 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "import tensorboard\n",
-    "\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1 - importando os modulos DQN e de edição de imagens\n",
+    "\n",
+    "2 - inicializando o pytorch com CPU ou GPU caso a mesma esteja disponível "
    ]
   },
   {
@@ -49,7 +65,15 @@
    "outputs": [],
    "source": [
     "from modelos import dqn_models\n",
-    "from wrappers.atari_wrappers import *"
+    "from wrappers.atari_wrappers import *\n",
+    "\n",
+    "# verifica a disponibilidade da GPU\n",
+    "if torch.cuda.is_available():\n",
+    "    is_gpu = torch.device(\"cuda\")\n",
+    "else:\n",
+    "    is_gpu = torch.device(\"cpu\")\n",
+    "\n",
+    "torch.set_default_device(is_gpu) # instanciando onde a rede neural deve rodar "
    ]
   },
   {
@@ -57,35 +81,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "torch.set_default_device(torch.device(\"cuda\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Experience = collections.namedtuple('Experience', field_names=['state', 'action', 'reward', 'done', 'new_state'])\n",
-    "\n",
-    "class DQNExperienceBuffer:\n",
-    "    def __init__(self, capacity):\n",
-    "        self.buffer = collections.deque(maxlen=capacity)\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.buffer)\n",
-    "\n",
-    "    def append(self, s1, a, r, done, s2):\n",
-    "        experience = Experience(s1, a, r, done, s2)\n",
-    "        self.buffer.append(experience)\n",
-    "\n",
-    "    def sample(self, batch_size):\n",
-    "        indices = np.random.choice(len(self.buffer), batch_size, replace=False)\n",
-    "        states, actions, rewards, dones, next_states = zip(*[self.buffer[idx] for idx in indices])\n",
-    "        return np.array(states), np.array(actions), np.array(rewards, dtype=np.float32), \\\n",
-    "               np.array(dones, dtype=np.uint8), np.array(next_states)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
