arquivos auxiliares do DQn finalizados + arquivos de gravação das partidas

--- a/Aprendizagem por Refoco/Projeto_Atari/main.ipynb
+++ b/Aprendizagem por Refoco/Projeto_Atari/main.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.5.2 (SDL 2.28.3, Python 3.11.6)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "import sys\n",
@@ -60,12 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from modelos import dqn_models\n",
     "from wrappers.atari_wrappers import *\n",
+    "\n",
+    "import gymnasium as gym\n",
     "\n",
     "# verifica a disponibilidade da GPU\n",
     "if torch.cuda.is_available():\n",
