--- a/Aprendizagem por Refoco/Projeto_Atari/main AD_INFINITUN.ipynb
+++ b/Aprendizagem por Refoco/Projeto_Atari/main AD_INFINITUN.ipynb
@@ -14711,19 +14711,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo decorrido em horas para o treinamento: 15.239910328388214 horas\n"
+      "Tempo decorrido em horas para o treinamento: 15.24 horas\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Tempo decorrido em horas para o treinamento: {Tempo_total/3600} horas\")"
+    "print(f\"Tempo decorrido em horas para o treinamento: {(Tempo_total/3600):0.2f} horas\")"
    ]
   }
  ],
