--- a/Aprendizagem por Refoco/Projeto_Atari/main_PPO.ipynb
+++ b/Aprendizagem por Refoco/Projeto_Atari/main_PPO.ipynb
@@ -9,24 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'2.1.0'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,6 +68,16 @@
      "text": [
       "Using cuda device\n",
       "Wrapping the env in a VecTransposeImage.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Pichau\\anaconda3\\envs\\rl23\\Lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 8184`, after every 127 untruncated mini-batches, there will be a truncated mini-batch of size 56\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=2046 and n_envs=4)\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -96,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6009 (pid 20732), started 0:08:59 ago. (Use '!kill 20732' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 18444), started 1 day, 17:01:50 ago. (Use '!kill 18444' to kill it.)"
       ]
      },
      "metadata": {},
@@ -112,13 +114,13 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-9ac73b9e6ca75d5\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-6eecd8f463650d27\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-9ac73b9e6ca75d5\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-6eecd8f463650d27\");\n",
        "          const url = new URL(\"http://localhost\");\n",
-       "          const port = 6009;\n",
+       "          const port = 6006;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
        "          }\n",
@@ -136,7 +138,7 @@
     }
    ],
    "source": [
-    "%tensorboard --logdir=log_dir"
+    "%tensorboard --logdir log_dir"
    ]
   },
   {
@@ -462,7 +464,7 @@
     "    # chama os métodos do \"trial\" (tentativa) para sugerir valores para os parâmetros\n",
     "    n_steps    = trial.suggest_int('n_steps', 1023, 3069)\n",
     "    gamma      = trial.suggest_float('gamma', 0.5, 1.50)\n",
-    "    lr         = trial.suggest_float('lr', 0.00015, 0.00045) # sugere na escala log (maior chance de escolher valor menor)\n",
+    "    lr         = trial.suggest_float('lr', 0.00015, 0.00045)\n",
     "    n_epochs   = trial.suggest_int('n_epochs', 5, 15)\n",
     "    # Defina os hiperparâmetros desejado\n",
     "\n",
@@ -4061,13 +4063,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6009 (pid 20732), started 5:43:54 ago. (Use '!kill 20732' to kill it.)"
+       "Reusing TensorBoard on port 6009 (pid 20732), started 1 day, 9:43:22 ago. (Use '!kill 20732' to kill it.)"
       ]
      },
      "metadata": {},
@@ -4077,11 +4079,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-86330a612017848a\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-b5d2e6e184746fd\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-86330a612017848a\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-b5d2e6e184746fd\");\n",
        "          const url = new URL(\"http://localhost\");\n",
        "          const port = 6009;\n",
        "          if (port) {\n",
